--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="google-site-verification" content="z9kHHReHPAdUxAIilfihYGK7iO1PH44OqpvDyXtrGcU" />
     <link rel="apple-touch-icon" href="icon.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
